<resources>
    <string name="app_name">Inventory App</string>

    <!-- Label for list menu with options insert dummy and delete list-->
    <string name="action_list_insert">Insert dummy data</string>
    <string name="action_list_delete">Delete List</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">
        Your data are not complete. Do you
        wan\'t to discard your changes and quit editing?
    </string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Description Text if you start the App first time and/or the list is empty -->
    <string name="description_text">
        Hi People, you can click the ADD NEW PRODUCT-BUTTON for inserting a new Product or you can
        test the look if you click \"Insert Dummy Data\" at the Settings Menu.
    </string>

    <!-- All Strings in the Edit Activity -->
    <string name="add_title_edit_activity">Add new Product</string>
    <string name="edit_title_edit_activity">Edit Product</string>
    <string name="phone_appendix_edit_activity">tel:</string>
    <string name="insert_failed_edit_activity">Inserting Product failed</string>
    <string name="insert_succed_edit_activity">Inserting Product succeed</string>
    <string name="update_failed_edit_activity">Updating Product failed</string>
    <string name="update_succed_edit_activity">Updating Product succeed</string>
    <string name="delete_failed_edit_activity">Deleting Product failed</string>
    <string name="delete_succed_edit_activity">Deleting Product succeed</string>
    <string name="new_order_toast">Your Remainder is smaller then 50. Please place a new Order!</string>

    <!-- Button in Inventory-List-Layout -->
    <string name="add_button_list_layout">Add new Product</string>

    <!-- Buttons, EditText-Field and TextViews in Edit-Layout -->
    <string name="add_image_button">Add Image</string>
    <string name="take_image_button">Take Image</string>
    <string name="product_name_text">Name:</string>
    <string name="product_name_edit">Product Name</string>
    <string name="price_text">Price[€]:</string>
    <string name="price_edit">Product Price</string>
    <string name="remainder_text">Remainder:</string>
    <string name="remainder_edit">Articles left</string>
    <string name="supplier_name_text">Supplier-Name:</string>
    <string name="supplier_name_edit">Name</string>
    <string name="supplier_phone_text">Supplier-Phone:</string>
    <string name="supplier_phone_edit">Phone</string>
    <string name="sale_edit">Enter Sale</string>
    <string name="add_shipment_edit">Enter Supply</string>
    <string name="submit_button">Submit</string>

    <!-- Exception Strings in InventoryProvider-Class -->
    <string name="exception_one">Cannot query unknown URI</string>
    <string name="exception_two">Unknown URI</string>
    <string name="exception_three"> with match </string>
    <string name="exception_four">Insertion is not supported for </string>
    <string name="exception_five">Product requires a name</string>
    <string name="exception_six">Product requires price</string>
    <string name="exception_seven">Product requires remainder value</string>
    <string name="exception_eight">Product requires image</string>
    <string name="exception_nine">Failed to insert row for</string>
    <string name="exception_ten">Deletion is not supported for</string>
    <string name="exception_eleven">Update is not supported for</string>
    <string name="exception_twelve">Product requires a name</string>
    <string name="name_dummy">Schokohase</string>
    <string name="supplier_name_dummy">Schoki GmbH</string>
    <string name="image_path_dummy">/storage/extSdCard/Images/Osterbilder/frohe-ostern.jpg</string>
    <string name="sale_to_big_toast">Your remainder is smaller than the sales volume. Please contact
        your Supplier and take an order.</string>

    <!--Alert Dialogs-->
    <string name="dialog_title_back_pressed">Discard Data!</string>
    <string name="dialog_message_back_pressed">Are you sure you want to discard this Data and go
        back to the List Screen?
    </string>

    <string name="dialog_title_delete">Delete Product!</string>
    <string name="dialog_message_delete">Are you sure you want to delete this Product?</string>
    <string name="dialog_message_delete_list">Are you sure you want to delete the Product List?</string>

    <string name="dialog_title_save">Save Product!</string>
    <string name="dialog_message_save">Do you want to save this changes?</string>

    <string name="dialog_positive_button">Yes</string>
    <string name="dialog_negative_button">No</string>
    <string name="dialog_negative_button_edit">No, keep editing</string>

    <!--Provider Toast Messages-->
    <string name="provider_toast_name">Please insert a Product Name!</string>
    <string name="provider_insert_message">Please insert a Price</string>
    <string name="provider_remainder_message">Please insert a Remainder!</string>
    <string name="provier_supplier_name_message">Please insert a Supplier Name!</string>
    <string name="provider_supplier_phone_message">Please insert a Supplier Phone!</string>
    <string name="provider_image_message">Please insert a Product Image!</string>

    <!--String in onActivityResult method of EditActivity-->
    <string name="take_image">data</string>

    <!--List Item XML-->
    <string name="name_item">Name:</string>
    <string name="price_item">Price:</string>
    <string name="left_item">Left:</string>
    <string name="product_name_item">Product Name</string>
    <string name="product_price_item">Price</string>
    <string name="remainder_item">Remainder</string>
    <string name="sale_item">Sale</string>
    <string name="image_uri">android.resource://com.example.standard.inventoryapp/</string>
    <string name="equal_symbol_provider">=?</string>

</resources>
