<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".EditActivity">

    <LinearLayout
        android:id="@+id/linear_buttons_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/add_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/add_image_button" />

            <Button
                android:id="@+id/take_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/take_image_button" />

        </LinearLayout>

        <ImageView
            android:id="@+id/image_product"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginRight="30dp"
            app:srcCompat="@mipmap/ic_launcher" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_buttons_image"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/EditActivity_text"
                android:text="@string/product_name_text" />

            <EditText
                android:id="@+id/product_name_detail"
                style="@style/EditActivity_text"
                android:hint="@string/product_name_edit" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/EditActivity_text"
                android:text="@string/price_text" />

            <EditText
                android:id="@+id/product_price_detail"
                style="@style/EditActivity_text"
                android:hint="@string/price_edit"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/EditActivity_text"
                android:text="@string/remainder_text" />

            <EditText
                android:id="@+id/product_remainder_detail"
                style="@style/EditActivity_text"
                android:hint="@string/remainder_edit"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/EditActivity_text"
                android:text="@string/supplier_name_text" />

            <EditText
                android:id="@+id/supplier_name_detail"
                style="@style/EditActivity_text"
                android:hint="@string/supplier_name_edit" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/EditActivity_text"
                android:text="@string/supplier_phone_text" />

            <EditText
                android:id="@+id/supplier_phone_detail"
                style="@style/EditActivity_text"
                android:hint="@string/supplier_phone_edit"
                android:inputType="phone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/product_sale_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/sale_edit"
                android:inputType="number"/>

            <EditText
                android:id="@+id/product_shipment_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/add_shipment_edit"
                android:inputType="number"/>

            <Button
                android:id="@+id/submit_button_detail"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/submit_button" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>